--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body {
 .social-media{
     margin: 1rem 0;
 }
-input{
+#caixa{
     color:#95a5a6;
     font-family: 'Times New Roman', Times, serif;
 }
